kubernetes/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: flaskv0-public
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host:
      http:
        paths:
          - path: /test
            backend:
              serviceName: flaskv0
              servicePort: 80
